<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context="se.transport.taxilon.MainActivity">




    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:background="@drawable/background"

        android:padding="16dp">

        <Button
            android:id="@+id/calculatorButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_bg_rounded_corners"
            android:bottomLeftRadius="10dp"
            android:bottomRightRadius="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="8dp"
            android:textAllCaps="false"
            android:paddingEnd="50dp"
            android:text="@string/calculatorButtonString"
            android:textSize="24sp"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:paddingLeft="8dp"
            android:paddingRight="50dp" />



        <Button
            android:id="@+id/monthlyButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_bg_rounded_corners"

            android:gravity="start|center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="50dp"
            android:text="@string/monthlyButtoString"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculatorButton"
            android:paddingLeft="8dp"
            android:paddingRight="50dp" />

        <Button
            android:id="@+id/faqButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_bg_rounded_corners"

            android:gravity="start|center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="50dp"
            android:text="@string/faqButtonString"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monthlyButton"
            android:paddingLeft="8dp"
            android:paddingRight="50dp" />


        <ImageView
            android:id="@+id/coinsIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/monthlywage"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/coins"
            app:layout_constraintBottom_toBottomOf="@+id/calculatorButton"
            app:layout_constraintEnd_toEndOf="@+id/calculatorButton"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="@+id/calculatorButton"
            app:layout_constraintTop_toTopOf="@+id/calculatorButton"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/calendarIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/monthlysalary"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/calendar"
            app:layout_constraintBottom_toBottomOf="@+id/monthlyButton"
            app:layout_constraintEnd_toEndOf="@+id/monthlyButton"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="@+id/monthlyButton"
            app:layout_constraintTop_toTopOf="@+id/monthlyButton"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/infoIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/faq"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/info"
            app:layout_constraintBottom_toBottomOf="@+id/faqButton"
            app:layout_constraintEnd_toEndOf="@+id/faqButton"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="@+id/faqButton"
            app:layout_constraintTop_toTopOf="@+id/faqButton"
            tools:targetApi="lollipop" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/calculatorButton"
            app:layout_constraintGuide_percent="0.16"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="31dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/descLogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faqButton"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/joinButton"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:background="@drawable/button_bg_rounded_corners_black"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/not_member"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo" />

    </android.support.constraint.ConstraintLayout>


</RelativeLayout>

